# python-project-52

./: .env_sample  .gitignore  Makefile  README.md  build.sh  pyproject.toml  ruff.toml
.github/workflows/: PyCI.yml  python_ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  trigger_error.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py  testcase.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py  testcase.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/task_manager/: index.html
task_manager/templates/tasks/: create.html  delete.html  index.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py  testcase.py  tests_homepage.py
