[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
]

[tool.ruff]
exclude = [
    "task_manager/settings.py",
    "**/migrations"
]
