[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-bootstrap5>=26.1",
    "django-filter>=25.2",
    "django-stubs>=5.2.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "ruff>=0.14.10",
    "types-django-filter>=25.2.0.20251228",
    "whitenoise>=6.11.0",
]

[tool.ruff]
exclude = [
    "task_manager/settings.py",
    "**/migrations"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["test_*.py", "*_test.py", "tests_*.py", "*_tests.py"]
python_classes = ["*Test*", "*Tests*", "*TestCase*"]
python_functions = ["test_*", "*_test", "tests_*", "*_tests"]
addopts = [
    "--ds=task_manager.settings",
    "--tb=short",
    "--strict-markers",
]
